# pabw-6-ecommerce

server/: .gitignore  Cargo.toml
server/src/: app.rs  error.rs  lib.rs  main.rs  util.rs
server/src/api/v1/: auth.rs  product.rs  token.rs  user.rs
src/: main.rs  util.rs
src/api/v1/: mod.rs
